lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: reactapp-service
spec:
  selector:
    app: reactapp
  type: NodePort
  ports:
  - name: http
    port: 3000
    nodePort: 30036
    protocol: TCP
